Fix margins and gaps

--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -104,7 +104,8 @@ background: var(--color-primary);
         grid-template-areas: 
         "proffy image image"
         "button button texting";
-        gap: 60px
+        column-gap: 87px;
+        row-gap: 86px;
     }
 
     .logo-container {
@@ -112,25 +113,30 @@ background: var(--color-primary);
         text-align: initial;
         /* alinha em relação ao seu grid */
         align-self: center;
+        margin: 0;
     }
 
     .logo-container img {
-        height: 100%;
+        height: 127px;
     }
 
     .hero-image {
         grid-area: image;
+        height: 350px;
     }
-    
+
     .buttons-container {
         grid-area: button;
         /* sobrescreve o justify dos buttons */
         justify-content: flex-start;
+        /* quando estiver na exibição maior remove a margem, pq desalinha */
+        margin: 0;
     }
 
     .total-conections {
         grid-area: texting;
         justify-content: end;
+        font-size: 1.2rem;
     }
 
 }
